--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,7 +9,7 @@
         android:id="@+id/FirstFragment"
         android:name="pt.ipg.projeto1.FirstFragment"
         android:label="@string/first_fragment_label"
-        tools:layout="@layout/fragment_first">
+        tools:layout="@layout/fragment_menu_principal">
 
         <action
             android:id="@+id/action_FirstFragment_to_SecondFragment"
