--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,11 +7,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <include
-        layout="@layout/content_main"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
 
@@ -27,6 +22,12 @@
             android:theme="?attr/actionBarTheme" />
 
     </com.google.android.material.appbar.AppBarLayout>
+
+    <include
+        layout="@layout/content_main"
+        android:layout_width="match_parent"
+        android:layout_height="285dp"
+        android:layout_marginTop="50dp" />
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
