--- a/app/src/main/res/menu/menu_eliminar.xml
+++ b/app/src/main/res/menu/menu_eliminar.xml
@@ -3,9 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/action_guardar"
-        android:icon="@android:drawable/ic_menu_save"
-        android:title="@string/Guardar"
+        android:id="@+id/action_eliminar"
+        android:icon="@android:drawable/ic_menu_delete"
+        android:title="@string/Eliminar"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_cancelar"
