--- a/app/src/main/res/menu/menu_edicao.xml
+++ b/app/src/main/res/menu/menu_edicao.xml
@@ -1,4 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <item
+        android:id="@+id/action_guardar"
+        android:icon="@android:drawable/ic_menu_save"
+        android:title="@string/Guardar"
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/action_cancelar"
+        android:icon="@android:drawable/ic_menu_close_clear_cancel"
+        android:title="@string/Cancelar"
+        app:showAsAction="ifRoom" />
 </menu>
