--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,26 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/MenuPrincipalFragment">
-
+    app:startDestination="@id/firstFragment">
     <fragment
-        android:id="@+id/MenuPrincipalFragment"
+        android:id="@+id/firstFragment"
         android:name="pt.ipg.projeto1.FirstFragment"
-        android:label="@string/first_fragment_label"
-        tools:layout="@layout/fragment_menu_principal">
-
-        <action
-            android:id="@+id/action_FirstFragment_to_SecondFragment"
-            app:destination="@id/SecondFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/SecondFragment"
-        android:name="pt.ipg.projeto1.SecondFragment"
-        android:label="@string/second_fragment_label"
-        tools:layout="@layout/fragment_second">
-
-        <action
-            android:id="@+id/action_SecondFragment_to_FirstFragment"
-            app:destination="@id/MenuPrincipalFragment" />
-    </fragment>
+        android:label="fragment_menu_principal"
+        tools:layout="@layout/fragment_menu_principal" />
 </navigation>
