--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,10 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/firstFragment">
+    app:startDestination="@id/MenuPrincipalFragment">
     <fragment
-        android:id="@+id/firstFragment"
-        android:name="pt.ipg.projeto1.FirstFragment"
-        android:label="fragment_menu_principal"
-        tools:layout="@layout/fragment_menu_principal" />
+        android:id="@+id/MenuPrincipalFragment"
+        android:name="pt.ipg.projeto1.MenuPrincipalFragment"
+        android:label="fragment_menu_principal" />
 </navigation>
