--- a/app/src/main/res/layout/fragment_eliminar_consultas.xml
+++ b/app/src/main/res/layout/fragment_eliminar_consultas.xml
@@ -60,7 +60,7 @@
             android:textSize="16sp" />
 
         <TextView
-            android:id="@+id/textView7"
+            android:id="@+id/textViewDoente"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/fab_margin"
