--- a/app/src/main/res/layout/fragment_eliminar_consultas.xml
+++ b/app/src/main/res/layout/fragment_eliminar_consultas.xml
@@ -32,7 +32,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/fab_margin"
-            android:text="@string/data" />
+            android:text="24-02-2022" />
 
         <TextView
             android:id="@+id/textView4"
