--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,45 +3,43 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/MenuPrincipalFragment">
+    app:startDestination="@id/menuPrincipalFragment">
+
     <fragment
-        android:id="@+id/MenuPrincipalFragment"
+        android:id="@+id/menuPrincipalFragment"
         android:name="pt.ipg.projeto1.MenuPrincipalFragment"
-        android:label="@string/menu_principal_label">
+        android:label="fragment_menu_principal"
+        tools:layout="@layout/fragment_menu_principal" >
         <action
-            android:id="@+id/action_MenuPrincipalFragment_to_listaConsultasFragment"
+            android:id="@+id/action_menuPrincipalFragment_to_listaConsultasFragment"
             app:destination="@id/listaConsultasFragment" />
     </fragment>
     <fragment
         android:id="@+id/listaConsultasFragment"
         android:name="pt.ipg.projeto1.ListaConsultasFragment"
-        android:label="@string/lista_consultas_label">
+        android:label="ListaConsultasFragment">
         <action
-            android:id="@+id/action_listaConsultasFragment_to_MenuPrincipalFragment"
-            app:destination="@id/MenuPrincipalFragment" />
-        <action
-            android:id="@+id/action_listaConsultasFragment_to_editarConsultasFragment"
-            app:destination="@id/EditarConsultasFragment" />
+            android:id="@+id/action_listaConsultasFragment_to_menuPrincipalFragment"
+            app:destination="@id/menuPrincipalFragment" />
         <action
             android:id="@+id/action_listaConsultasFragment_to_eliminarConsultasFragment"
             app:destination="@id/eliminarConsultasFragment" />
+        <action
+            android:id="@+id/action_listaConsultasFragment_to_editarConsultasFragment"
+            app:destination="@id/editarConsultasFragment" />
     </fragment>
     <fragment
-        android:id="@+id/EditarConsultasFragment"
-        android:name="pt.ipg.projeto1.EditarConsultasFragment">
+        android:id="@+id/editarConsultasFragment"
+        android:name="pt.ipg.projeto1.EditarConsultasFragment"
+        android:label="EditarConsultasFragment" >
         <action
             android:id="@+id/action_editarConsultasFragment_to_listaConsultasFragment"
             app:destination="@id/listaConsultasFragment" />
-        <argument
-            android:name="consultas"
-            android:defaultValue="@null"
-            app:argType="pt.ipg.projeto1.Consultas"
-            app:nullable="true" />
     </fragment>
     <fragment
         android:id="@+id/eliminarConsultasFragment"
         android:name="pt.ipg.projeto1.EliminarConsultasFragment"
-        android:label="@string/eliminar_consulta_label">
+        android:label="EliminarConsultasFragment" >
         <action
             android:id="@+id/action_eliminarConsultasFragment_to_listaConsultasFragment"
             app:destination="@id/listaConsultasFragment" />
