--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,8 +8,8 @@
     <fragment
         android:id="@+id/menuPrincipalFragment"
         android:name="pt.ipg.projeto1.MenuPrincipalFragment"
-        android:label="fragment_menu_principal"
-        tools:layout="@layout/fragment_menu_principal" >
+        android:label="@string/menu_principal_label"
+        tools:layout="@layout/fragment_menu_principal">
         <action
             android:id="@+id/action_menuPrincipalFragment_to_listaConsultasFragment"
             app:destination="@id/listaConsultasFragment" />
@@ -17,7 +17,7 @@
     <fragment
         android:id="@+id/listaConsultasFragment"
         android:name="pt.ipg.projeto1.ListaConsultasFragment"
-        android:label="ListaConsultasFragment">
+        android:label="@string/lista_consultas_label">
         <action
             android:id="@+id/action_listaConsultasFragment_to_menuPrincipalFragment"
             app:destination="@id/menuPrincipalFragment" />
@@ -31,17 +31,25 @@
     <fragment
         android:id="@+id/editarConsultasFragment"
         android:name="pt.ipg.projeto1.EditarConsultasFragment"
-        android:label="EditarConsultasFragment" >
+        android:label="@string/editar_consultas_label">
         <action
             android:id="@+id/action_editarConsultasFragment_to_listaConsultasFragment"
             app:destination="@id/listaConsultasFragment" />
+        <argument
+            android:name="consultas"
+            app:argType="pt.ipg.projeto1.Consultas"
+            app:nullable="true"
+            android:defaultValue="@null" />
     </fragment>
     <fragment
         android:id="@+id/eliminarConsultasFragment"
         android:name="pt.ipg.projeto1.EliminarConsultasFragment"
-        android:label="EliminarConsultasFragment" >
+        android:label="@string/eliminar_consulta_label">
         <action
             android:id="@+id/action_eliminarConsultasFragment_to_listaConsultasFragment"
             app:destination="@id/listaConsultasFragment" />
+        <argument
+            android:name="consulta"
+            app:argType="pt.ipg.projeto1.Consultas" />
     </fragment>
 </navigation>
