--- a/app/src/main/res/layout/fragment_lista_consultas.xml
+++ b/app/src/main/res/layout/fragment_lista_consultas.xml
@@ -2,7 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".ListaConsultasFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewConsultas"
@@ -10,5 +12,9 @@
         android:layout_height="match_parent"
         android:layout_margin="@dimen/fab_margin"
         tools:layout_editor_absoluteX="-2dp"
-        tools:layout_editor_absoluteY="16dp" />
+        tools:layout_editor_absoluteY="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
