--- a/app/src/main/res/layout/fragment_editar_consultas.xml
+++ b/app/src/main/res/layout/fragment_editar_consultas.xml
@@ -18,7 +18,7 @@
             tools:ignore="TextContrastCheck" />
 
         <TextView
-            android:id="@+id/textViewMedico"
+            android:id="@+id/textViewCartaoCidadao"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/fab_margin"
@@ -36,7 +36,7 @@
             tools:ignore="SpeakableTextPresentCheck" />
 
         <TextView
-            android:id="@+id/textViewDoente"
+            android:id="@+id/textViewEspecialidade"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/fab_margin"
