--- a/app/src/main/res/layout/fragment_eliminar_medicos.xml
+++ b/app/src/main/res/layout/fragment_eliminar_medicos.xml
@@ -16,7 +16,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/fab_margin"
-            android:text="@string/eliminarConsulta"
+            android:text="@string/eliminarMedico"
             android:textColor="@color/design_default_color_error"
             android:textSize="34sp" />
 
@@ -25,7 +25,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/fab_margin"
-            android:text="@string/Data"
+            android:text="@string/Nome"
             android:textColor="@color/purple_700"
             android:textSize="16sp" />
 
@@ -34,14 +34,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/fab_margin"
-            android:text="24-02-2022" />
+            android:text="Alberto" />
 
         <TextView
             android:id="@+id/textView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/fab_margin"
-            android:text="@string/medicos"
+            android:text="@string/CartaoCidadao"
             android:textColor="@color/purple_700"
             android:textSize="16sp" />
 
@@ -50,14 +50,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/fab_margin"
-            android:text="João" />
+            android:text="123456789" />
 
         <TextView
             android:id="@+id/textView6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/fab_margin"
-            android:text="@string/doentes"
+            android:text="@string/Especialidades"
             android:textColor="@color/purple_700"
             android:textSize="16sp" />
 
@@ -66,6 +66,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/fab_margin"
-            android:text="Afonso" />
+            android:text="Cirurgia Geral" />
     </LinearLayout>
 </FrameLayout>
