Para amanha (10/07/2022)! Acabar de fazer a função processaOpcaoMenu na ListaMedicosFragment.kt
Em seguida imlpementar o resto no AdapterMedicos.kt

Ver se é necessário implementar o URI para as especialidades, e ver se esta tudo em ordem.

inserir os novos fragments no nav_graph dentro do navigation (fragments do medicos)

E provavelmente tenho algumas correções feitas

e depois continuar

--- a/app/src/main/res/layout/item_consulta.xml
+++ b/app/src/main/res/layout/item_consulta.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textViewNomeMedico"
+        android:id="@+id/textViewData"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
@@ -19,7 +19,7 @@
         tools:text="24-02-2022"/>
 
     <TextView
-        android:id="@+id/textViewMedicos"
+        android:id="@+id/textViewMedico"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
@@ -27,11 +27,11 @@
         android:textSize="60sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewNomeMedico"
+        app:layout_constraintTop_toBottomOf="@+id/textViewData"
         tools:text="Alexandre"/>
 
     <TextView
-        android:id="@+id/textViewDoentes"
+        android:id="@+id/textViewDoente"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
@@ -39,6 +39,6 @@
         android:textSize="60sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewMedicos"
+        app:layout_constraintTop_toBottomOf="@+id/textViewMedico"
         tools:text="Diogo"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
