--- a/app/src/main/res/layout/fragment_editar_medicos.xml
+++ b/app/src/main/res/layout/fragment_editar_medicos.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EditarConsultasFragment" >
+    tools:context=".EditarMedicosFragment" >
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
