--- a/app/src/main/res/layout/fragment_eliminar_medicos.xml
+++ b/app/src/main/res/layout/fragment_eliminar_medicos.xml
@@ -46,7 +46,7 @@
             android:textSize="16sp" />
 
         <TextView
-            android:id="@+id/textViewCartaoCidadao"
+            android:id="@+id/textViewMedico"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/fab_margin"
@@ -62,7 +62,7 @@
             android:textSize="16sp" />
 
         <TextView
-            android:id="@+id/textViewEspecialidade"
+            android:id="@+id/textViewDoente"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/fab_margin"
