--- a/app/src/main/res/layout/item_consulta.xml
+++ b/app/src/main/res/layout/item_consulta.xml
@@ -19,7 +19,7 @@
         tools:text="24-02-2022"/>
 
     <TextView
-        android:id="@+id/textViewMedico"
+        android:id="@+id/textViewCartaoCidadao"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
@@ -31,7 +31,7 @@
         tools:text="Alexandre"/>
 
     <TextView
-        android:id="@+id/textViewDoente"
+        android:id="@+id/textViewEspecialidade"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
@@ -39,6 +39,6 @@
         android:textSize="60sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewMedico"
+        app:layout_constraintTop_toBottomOf="@+id/textViewCartaoCidadao"
         tools:text="Diogo"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
