--- a/app/src/main/res/layout/item_medico.xml
+++ b/app/src/main/res/layout/item_medico.xml
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textViewMedico"
+        android:id="@+id/textViewCartaoCidadao"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
@@ -30,7 +30,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textViewNome" />
 
     <TextView
-        android:id="@+id/textViewEspecialidades"
+        android:id="@+id/textViewEspecialidade"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
@@ -38,5 +38,5 @@
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewMedico" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewCartaoCidadao" />
 </androidx.constraintlayout.widget.ConstraintLayout>
