adicionado uri especialidades no ContentProviderDoentes.kt.
adicionado mais um botao (especialidades) no fragment_menu_principal.xml

falya inserir a processaoOpcaoMenu no ListaEspecialidadesFragment.kt

--- a/app/src/main/res/layout/fragment_menu_principal.xml
+++ b/app/src/main/res/layout/fragment_menu_principal.xml
@@ -35,4 +35,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonMedicos" />
+
+    <Button
+        android:id="@+id/buttonEspecialidades"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/fab_margin"
+        android:text="@string/Especialidades"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonConsultas" />
 </androidx.constraintlayout.widget.ConstraintLayout>
