--- a/app/src/main/res/layout/fragment_menu_principal.xml
+++ b/app/src/main/res/layout/fragment_menu_principal.xml
@@ -45,4 +45,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonConsultas" />
+
+    <Button
+        android:id="@+id/buttonDoencas"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/fab_margin"
+        android:text="@string/Doencas"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonEspecialidades" />
 </androidx.constraintlayout.widget.ConstraintLayout>
